# cef

./: .gitignore  .gitignore.in  .gitmodules  .landmines  .style.cfg  AI_POLICY.md  AUTHORS.txt  BUILD.gn  CHROMIUM_BUILD_COMPATIBILITY.txt  CHROMIUM_UPDATE.txt  CMakeLists.txt.in  CONTRIBUTING.md  DEPS  Doxyfile  LICENSE.txt  README.md  cef.gyp  cef.gypi  cef.sln  cef_api_versions.json  cef_create_projects.bat  cef_create_projects.sh  cef_paths.gypi  cef_paths2.gypi  cef_repack_locales.gni  cef_unittests.vcproj  cefclient.vcproj  libcef.vcproj  libcef_dll_wrapper.vcproj  libcef_static.vcproj  macros.cmake.in  patcher.vcproj
.github/: FUNDING.yml
bazel/: copy_filegroups.bzl  library_helpers.bzl
bench/: README.md  browser-use-bench.py  cef-bench-standalone.py  package.json  real-bench.py  report.py  requirements.txt  run.py  stagehand-bench.js  tasks.py
cef1/: CHROMIUM_BUILD_COMPATIBILITY.txt  VERSION  cef.gyp  cef.gypi  cef_paths.gypi  cef_paths2.gypi
cef3/: CHROMIUM_BUILD_COMPATIBILITY.txt  VERSION  cef.gyp  cef.gypi  cef_paths.gypi  cef_paths2.gypi
cmake/: cef_macros.cmake.in  cef_variables.cmake.in
docs/: README.md  _config.yml  api_versioning.md  architecture.md  automated_build_setup.md  branches_and_building.md  chromium_update.md  contributing_with_git.md  crash_reporting.md  general_usage.md  hands_on_tutorial.md  index.md  javascript_integration.md  linking_different_runtime_libraries.md  master_build_quick_start.md  sandbox_setup.md  tutorial.md  using_address_sanitizer.md  using_chrome_driver.md  using_the_capi.md
include/: cef.h  cef_accessibility_handler.h  cef_api_hash.h  cef_app.h  cef_application_mac.h  cef_audio_handler.h  cef_auth_callback.h  cef_auth_vault.h  cef_automation_program.h  cef_base.h  cef_browser.h  cef_browser_capture.h  cef_browser_process_handler.h  cef_browser_security.h  cef_callback.h  cef_capi.h  cef_client.h  cef_clipboard_handler.h  cef_command_handler.h  cef_command_line.h  cef_component_updater.h  cef_compound_operation.h  cef_content_filter.h  cef_context_menu_handler.h  cef_cookie.h  cef_crash_util.h  cef_devtools_message_observer.h  cef_dialog_handler.h  cef_display_handler.h  cef_dom.h  cef_download_handler.h  cef_download_item.h  cef_drag_data.h  cef_drag_handler.h  cef_export.h  cef_extension.h  cef_extension_handler.h  cef_file_util.h  cef_find_handler.h  cef_focus_handler.h  (+85 more)
libcef/: browser_appcache_system.cc  browser_appcache_system.h  browser_database_system.cc  browser_database_system.h  browser_devtools_agent.cc  browser_devtools_agent.h  browser_devtools_callargs.cc  browser_devtools_callargs.h  browser_devtools_client.cc  browser_devtools_client.h  browser_devtools_scheme_handler.cc  browser_devtools_scheme_handler.h  browser_drag_delegate.cc  browser_drag_delegate.h  browser_drag_delegate_win.cc  browser_drag_delegate_win.h  browser_drop_delegate.cc  browser_drop_delegate.h  browser_file_system.cc  browser_file_system.h  browser_file_writer.cc  browser_file_writer.h  browser_impl.cc  browser_impl.h  browser_impl_gtk.cc  browser_impl_mac.mm  browser_impl_win.cc  browser_navigation_controller.cc  browser_navigation_controller.h  browser_persistent_cookie_store.cc  browser_persistent_cookie_store.h  browser_request_context.cc  browser_request_context.h  browser_request_context_proxy.cc  browser_request_context_proxy.h  browser_resource_loader_bridge.cc  browser_resource_loader_bridge.h  browser_settings.cc  browser_settings.h  browser_socket_stream_bridge.cc  (+150 more)
libcef/common/extensions/api/: BUILD.gn  README.txt  _api_features.json  _permission_features.json  api.gyp  browser_manifest_overlay.json  renderer_manifest_overlay.json  schemas.gni  schemas.gypi  streams_private.idl
libcef/common/mojom/: BUILD.gn  cef.mojom
libcef/features/: BUILD.gn  chrome_cef.h  features.gni  runtime.h  runtime_checks.h
libcef_dll/: CMakeLists.txt.in  cef_logging.h  cef_string.c  cef_string_map.cc  libcef.lst  libcef_dll.cc  libcef_dll.rc  libcef_dll.vcproj  libcef_dll.vsprops  libcef_dll2.cc  precompiled_libcef.cc  precompiled_libcef.h  ptr_util.h  resource.h  shutdown_checker.cc  shutdown_checker.h  template_util.h  transfer_util.cc  transfer_util.cpp  transfer_util.h  views_stub.cc  wrapper_types.h
patch/: README.txt  patch.cfg  patch.vcproj  patch_build.cfg  patch_source.cfg
tests/: README.md
tools/: bazel_util.py  build_projects.bat  build_projects.sh  cef_api_hash.py  cef_api_hash_test.py  cef_parser.py  cef_version.py  cef_version_test.py  check_revision.py  check_style.bat  check_style.py  clang_util.py  combine_libs.py  commit_number.py  compile_ib_files.py  crash_server.py  date_util.py  exec_util.py  file_util.py  fix_style.bat  fix_style.py  fix_style.sh  fuse_gmock_files.py  fuse_gtest_files.py  gclient_hook.py  gclient_util.py  git_util.py  gn_args.py  gn_args_test.py  gyp_cef  (+59 more)
tools/clang/cef_cpp_rewriter/: CMakeLists.txt  CefCppRewriter.cpp
tools/clang/cef_cpp_rewriter/tests/: .gitignore  contains-expected.cc  contains-negative-original.cc  contains-original.cc  disallow-copy-expected.cc  disallow-copy-negative-original.cc  disallow-copy-original.cc  iterator-loops-expected.cc  iterator-loops-negative-expected.cc  iterator-loops-original.cc  structured-bindings-expected.cc  structured-bindings-negative-expected.cc  structured-bindings-negative-original.cc  structured-bindings-original.cc
tools/distrib/bazel/: .bazelrc  BUILD.bazel  MODULE.bazel.in  WORKSPACE  bazel-variables.bzl.in  tests-cefclient-BUILD.bazel.in  tests-cefclient-linux-BUILD.bazel  tests-cefclient-mac-BUILD.bazel  tests-cefclient-win-BUILD.bazel  tests-cefsimple-BUILD.bazel.in  tests-cefsimple-linux-BUILD.bazel  tests-cefsimple-mac-BUILD.bazel  tests-cefsimple-win-BUILD.bazel  tests-cefsimple_capi-BUILD.bazel.in  tests-cefsimple_capi-linux-BUILD.bazel  tests-cefsimple_capi-mac-BUILD.bazel  tests-cefsimple_capi-win-BUILD.bazel  tests-ceftests-BUILD.bazel.in  tests-ceftests-linux-BUILD.bazel  tests-ceftests-mac-BUILD.bazel  tests-ceftests-win-BUILD.bazel  tests-gmock-BUILD.bazel  tests-gtest-BUILD.bazel  tests-shared-BUILD.bazel.in
(+4490 files in other folders)
