# Copyright 2016 The Chromium Embedded Framework Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  enable_cef = true

  # Enables base target customizations necessary for distribution of the
  # cef_sandbox static library. This value will be set via gn_args.py for the
  # official sandbox build configurations only. DO NOT SET THIS VALUE MANUALLY
  # FOR OTHER CHROMIUM/CEF BUILD CONFIGURATIONS AS ITS USE MAY HAVE SIGNIFICANT
  # PERFORMANCE AND/OR SECURITY IMPLICATIONS.
  is_cef_sandbox_build = false
}
