# Copyright 2021 The Chromium Embedded Framework Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [ "cef.mojom" ]

  cpp_only = true
  disable_variants = true

  public_deps = [
    "//content/public/common:interfaces",
    "//mojo/public/mojom/base",
    "//services/network/public/mojom:cookies_mojom",
    "//services/network/public/mojom:url_loader_base",
    "//third_party/blink/public/mojom:mojom_platform",
    "//ui/gfx/geometry/mojom",
    "//url/mojom:url_mojom_gurl",
  ]

  overridden_deps = [
    "//content/public/common:interfaces",
    "//third_party/blink/public/mojom:mojom_platform",
  ]

  component_deps = [ "//content/public/common" ]
}
