# Copyright (c) 2025 The Chromium Embedded Framework Authors. All rights
# reserved. Use of this source code is governed by a BSD-style license that
# can be found in the LICENSE file.

PRODUCT_NAME = "cefsimple_capi"
PKG_NAME = "//tests/{}".format(PRODUCT_NAME)

# Allow access from the parent package only.
package(default_visibility = [
    "{}:__pkg__".format(PKG_NAME),
])

load("//bazel/linux:exe_helpers.bzl", "declare_exe")

#
# Linux executable target.
#

declare_exe(
    name = PRODUCT_NAME,
    srcs = [
        "{}:SrcsLinux".format(PKG_NAME),
    ],
    copts = [
        "-std=c11",  # cefsimple_capi requires C11 for stdatomic.h
    ],
)
